kubernetes/apps/flux-system/flux-instance/app/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gh-allow-list
  namespace: flux-system
spec:
  ipAllowlist:
    sourceRange:
      # GH Webhooks
      - "192.30.252.0/22"
      - "185.199.108.0/22"
      - "140.82.112.0/20"
      - "143.55.64.0/20"
      - "2a0a:a440::/29"
      - "2606:50c0::/32"
      - "192.168.35.0/24" # Home network
