kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.35.15
spec:
  hostnames:
    - flux-webhook.68cc.io
  parentRefs:
    - name: traefik-external-gateway
      namespace: network
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
          namespace: flux-system
      matches:
        - path:
            type: PathPrefix
            value: /hook/
